--- a/project_tasks.html
+++ b/project_tasks.html
@@ -296,6 +296,7 @@
       </tr>
     </tbody>
   </table>
+  <a id="newtask-button" class="btn btn-block btn-xs m-0 p-0" href="project_tasks.html#" role="button">+ create new task</a>
 </div>
 
           </div>
