--- a/project_forum.html
+++ b/project_forum.html
@@ -251,7 +251,7 @@
           </div>
           <div id="card-body" class="card-body">
             
-<div class="card">
+<div class="card forum-card">
   <div class="card-header">
     <p>UI Design discussion</p>
   </div>
@@ -274,7 +274,7 @@
     </p>
   </div>
 </div>
-<div class="card">
+<div class="card forum-card">
   <div class="card-header">
     <p>General ideas</p>
   </div>
